maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:13: error: ')' expected but 'for' found.
  for (y<-Y to getMondeHauteur()-1){
  ^